Fixed a syntax error in the last git commit and added an overflow property to the div containing the simple tables.

--- a/sites/all/themes/soccer_boss_theme/css/global.styles.css
+++ b/sites/all/themes/soccer_boss_theme/css/global.styles.css
@@ -1856,3 +1856,7 @@ tr.error {}
 img.chart {
   width: 100%;
 }
+
+#simple-table-form {
+  overflow: scroll;
+}
